--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,17 +4,15 @@
   {% include head.html %}
 
   <body>
-
+  <div id="main">
     {% include header.html %}
-
-    <div class="page-content">
-      <div class="wrapper">
-        {{ content }}
+      <div class="page-content">
+        <div class="wrapper">
+          {{ content }}
+        </div>
       </div>
-    </div>
-
     {% include footer.html %}
-
+  </div>
   </body>
 
 </html>
