--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -19,10 +19,19 @@ body {
     line-height: $base-line-height;
     font-weight: 300;
     color: $text-color;
-    background-color: $background-color;
+    background: url("/pics/background.png") no-repeat top center;
     -webkit-text-size-adjust: 100%;
 }
 
+#main {
+    margin-left: 12.5%;
+    margin-right: 12.5%;
+
+        @include media-query($on-laptop) {
+                margin-left: 0;
+                margin-right: 0;
+    }
+}
 
 
 /**
