--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -2,9 +2,10 @@
  * Site header
  */
 .site-header {
-    border-top: 5px solid $grey-color-dark;
+    background: url("/pics/header.jpg") no-repeat top center;
     border-bottom: 1px solid $grey-color-light;
     min-height: 56px;
+    //min-width: 1024px;
 
     // Positioning context for the mobile navigation icon
     position: relative;
