blogg, humans, robots, comments

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,6 +13,8 @@
       </div>
     {% include footer.html %}
   </div>
+ <script id="dsq-count-scr" src="//janir.disqus.com/count.js" async></script>
+  
   </body>
 
 </html>
