--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,7 +5,7 @@
     <meta property="og:title" content="Jani Rautiainen" />
 	<meta property="og:type" content="website" />
 	<meta property="og:url" content="https://janix86.github.io/" />
-	<meta property="og:image" content="https://janix86.github.io/pics/jag.png"/>
+	<meta property="og:image" content="/pics/jag.png"/>
 	<meta property="og:image:width" content="300" />
 	<meta property="og:image:height" content="300" />
 
