--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,13 +1,11 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width initial-scale=1" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta property="og:title" content="Jani Rautiainen" />
 	<meta property="og:type" content="website" />
 	<meta property="og:url" content="https://janix86.github.io/" />
-	<meta property="og:image" content="/pics/jag.png"/>
-	<meta property="og:image:width" content="300" />
-	<meta property="og:image:height" content="300" />
+	<meta property="og:image" content="/pics/jag.png" />
 
     <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
     <meta name="description" content="{{ site.description }}">
