--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,7 +5,7 @@
     <meta property="og:title" content="Jani Rautiainen" />
 	<meta property="og:type" content="website" />
 	<meta property="og:url" content="https://janix86.github.io/" />
-	<meta property="og:image:secure_url" content="https://janix86.github.io/pics/jag.gif" />
+	<meta property="og:image:" content="https://janix86.github.io/pics/jag.gif" />
 
     <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
     <meta name="description" content="{{ site.description }}">
