--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,10 +2,13 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width initial-scale=1" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta property="og:image" content="http://janix86.github.io/pics/jag.gif" />
+    <meta property="og:image:width" content="640" /> 
+	<meta property="og:image:height" content="442" />
     <meta property="og:title" content="Jani Rautiainen" />
 	<meta property="og:type" content="website" />
 	<meta property="og:url" content="http://janix86.github.io/" />
-	<meta property="og:image:" content="http://janix86.github.io/pics/jag.gif" />
+	
 
     <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
     <meta name="description" content="{{ site.description }}">
