--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,6 +4,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
     <meta property="og:image" content="https://janix86.github.io/pics/jag.png" />
+    <meta property="og:image:secure_url" content="https://janix86.github.io/pics/jag.png" />
     <meta property="og:title" content="Jani Rautiainen" />
 	<meta property="og:type" content="website" />
 	<meta property="og:url" content="https://janix86.github.io" />
